--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  CI:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -22,13 +22,46 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - name: Docker Login
+        uses: docker/login-action@v1.8.0
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PASS }}
+      - name: Criando a Imagem Docker
+        uses: docker/build-push-action@v2.3.0
+        with:
+          context: ./src
+          file: ./src/Dockerfile
+          tags: |
+            razborges/api-produto:latest
+            razborges/api-produto:${{ github.run_number }}
+          push: true
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+  CD:
+    needs: [CI]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Definindo o contexto do Kubernetes
+        uses: Azure/k8s-set-context@v1
+        with:
+          kuberconfig: ${{ secrets.K8S_CONFIG }}
+
+      -name: Deploy MongoDB
+        uses: Azure/k8s-deploy@v1.3
+        with:
+          manifests:
+            k8s/mongodb/deployment.yaml
+            k8s/mongodb/service.yaml
+
+      -name: Deploy API
+        uses: Azure/k8s-deploy@v1.3
+        with:
+          images: 'razborges/api-produto:${{ github.run_number }}'
+          manifests:
+            k8s/api/deployment.yaml
+            k8s/api/service.yaml
+
+
+
