--- a/k8s/api/deployment.yaml
+++ b/k8s/api/deployment.yaml
@@ -3,6 +3,11 @@ kind: Deployment
 metadata:
   name: api
 spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 2
+      maxUnavailable: 0
   replicas: 3
   selector:
     matchLabels:
